# v6-rust

./: Cargo.toml  README-notes.md  README.md
examples/sandbox/: example_layer.rs  main.rs  timer.rs
examples/sandbox/assets/shaders/: flatcolor.glsl  simple-shader.glsl
examples/title/: main.rs
src/: app.rs  core.rs  layer.rs  lib.rs  render_command.rs  renderer.rs  shader.rs  texture.rs  window.rs
src/app/: renderer.rs  window.rs
src/shader/: mod.rs
tests/: sample_test.rs  sandbox_test.rs
tests/test_layers/: mod.rs
