[package]
name = "v6"
version = "0.1.0"
authors = ["Rob Tamlyn <MemoryChips@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.4.0"
rand = "0.7.3"
glfw = "0.35.0"
gl = "0.14.0"
# glm = "0.2.3"
glam = "0.8.5"

# [dependencies.glfw]
# git = "https://github.com/bjz/glfw-rs.git"

# this may not be needed for examples
# [[example]]
# name = "sandbox"
# path = "examples/sandbox/main.rs"
